[package]
name = "asd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
babel = { version = "0.1.0", path = "../babel" }
bytes = "1.2.1"
env_logger = "0.9.1"
log = "0.4.17"
rand = "0.8.5"
sha1 = "0.10.5"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
