[package]
name = "babel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
bytes = "1.2.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
env_logger = "0.9.1"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
slotmap = "1.0.6"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
